testlibrary_tests/ctw/ClassesListTest.java fails with Agent timeout frequently

XMLWordPrintable

    • b21
    • Verified

        testlibrary_tests/ctw/ClassesListTest.java

        Log:
        #-----testresult-----
        description=file\:/scratch/opt/mach5/mesos/work_dir/jib-master/install/jdk-13-969/src.full/open/test/hotspot/jtreg/testlibrary_tests/ctw/ClassesListTest.java
        elapsed=6040614 1\:40\:40.614
        end=Tue May 07 21\:53\:55 UTC 2019
        environment=regtest
        execStatus=Error. Agent error\: java.lang.Exception\: Agent 5 timed out with a timeout of 6000 seconds; check console log for any additional details

        ----------System.err:(3/35)----------

        JavaTest Message: Test complete.

        result: Error. Agent error: java.lang.Exception: Agent 5 timed out with a timeout of 6000 seconds; check console log for any additional details

              Assignee:
              Xin Liu
              Reporter:
              Leo Jiang (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: