8223537: testlibrary_tests/ctw/ClassesListTest.java fails with Agent timeout frequently Reviewed-by: thartmann, kvn